@@ -5,6 +5,12 @@ plugins {
 
 val lombokVersion: String by project
 val junitVersion: String by project
+val lwjglVersion: String by project
+
+sourceSets.create("demo") {
+    compileClasspath += sourceSets.main.get().output
+    runtimeClasspath += sourceSets.main.get().output
+}
 
 repositories {
     mavenCentral()
@@ -15,6 +21,19 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
     testImplementation("org.junit.jupiter:junit-jupiter:$junitVersion")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    "demoImplementation"(platform("org.lwjgl:lwjgl-bom:$lwjglVersion"))
+    "demoImplementation"("org.lwjgl:lwjgl")
+    "demoImplementation"("org.lwjgl:lwjgl-glfw")
+    "demoRuntimeOnly"("org.lwjgl:lwjgl::natives-macos-arm64")
+    "demoRuntimeOnly"("org.lwjgl:lwjgl-glfw::natives-macos-arm64")
+    "demoRuntimeOnly"("org.lwjgl:lwjgl::natives-macos")
+    "demoRuntimeOnly"("org.lwjgl:lwjgl-glfw::natives-macos")
+}
+
+tasks.register<JavaExec>("runDemo") {
+    classpath = sourceSets["demo"].runtimeClasspath
+    mainClass = "dev.dov.metalj.demo.Demo"
+    jvmArgs("--enable-native-access=ALL-UNNAMED", "-XstartOnFirstThread")
 }
 
 java {
